2008-03-27  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c: use a button with icon for the
	progress cancel button.

2008-03-27  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_style_set):
	added an arbitrary number to the minimum height.

2008-03-27  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c: make sure that the statusbar frame
	requests enough space to hold it's children, also the invisible ones.

	* app/display/gimpdisplayshell.c (gimp_display_shell_style_set):
	don't add 1 pixel here, this spacing is gone.

2008-03-27  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.[ch]: derive GimpStatusbar from
	GtkStatusbar. Use the normal statusbar label for statusbar
	messages and only show the progressbar when progress is active.

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): removed
	spacing from the main vertical box.

2008-03-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/dicom.c (dicom_loader): cosmetic changes.

2008-03-27  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/dicom.c: Validated samples_per_pixel, changed
	the loop counter data type, and patched code to work on big endian
	CPUs.
	
2008-03-27  Sven Neumann  <sven@gimp.org>

	* app/gui/gui.c (gui_init): disable automatic startup notification.
	(gui_restore_after_callback): notify the display enviroment that
	the application has finished loading.

	* app/gui/splash.c: no need to deal with startup notification here
	any longer.

2008-03-26  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/dicom.c: Forget about negative values in signed
	data and scale positive values appropriately. Also fixed signed
	values in the 8 bpp case, and added some comments.
	
2008-03-26  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/dicom.c: made the dicom plug-in a bit better.
	
	1. Parse the default little-endian encoding correctly.
	2. Handle signed pixel data.